# ah_openai

./: README.md  plugin_info.json  pyproject.toml
src/ah_openai/: .env  __init__.py  mod.py  mod_old.py  openai_s2s.py  speech_to_speech.py  speech_to_speech.py.backup
src/ah_openai/data/: plugin_manifest.json
src/ah_openai/override/: system.jinja2
src/ah_openai/s2s/: __init__.py  audio_pacer.py  connection.py  handlers.py  handlers.py.bak.1763016131  utils.py
