[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ah_openai"
version = "0.1.0"
description = "A module for OpenAI integration"
requires-python = ">=3.7"
dependencies = [
    "openai>=1.0.0",  # Using the new OpenAI client
    "python-dotenv",  # For handling environment variables
]

[project.optional-dependencies]
dev = [
    "pytest",
]
